--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -121,7 +121,7 @@
 
 .open-post:last-child {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 20px 0px;
+  padding-top: 20px;
   margin-top: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 100px;
 }
