--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,8 +3,9 @@ body {
 }
 
 .status-bar {
-  position: fixed;
   top: 0;
+  position: fixed;
+  background-color: white;
   width: 100%;
   display: flex;
   justify-content: center;
