--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,6 +18,18 @@
   color: #2e363e;
 }
 
+@keyframes notificationanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translatey(-5px) rotatey(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   background-color: tomato;
   width: 30px;
@@ -31,6 +43,7 @@
   position: absolute;
   left: 15px;
   bottom: 15px;
+  animation: notificationanimation 2s ease-in-out infinite;
 }
 
 .nav__notification2 {
@@ -41,4 +54,30 @@
   display: flex;
   position: absolute;
   left: 30px;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
